--- a/04-estilizando-conteudo/_cdn/css/style.css
+++ b/04-estilizando-conteudo/_cdn/css/style.css
@@ -1,6 +1,7 @@
+/* TOPO */
 .main_header {
     width: 100%;
-    background-color: #2D3142;
+    background-color: #2d3142;
 }
 
 .main_header .main_header_content {
@@ -41,4 +42,49 @@
 .main_header_content_menu li a:hover {
     color: #fff;
     background-color: #d36833;
+}
+
+/* PRIMEIRA DOBRA */
+.main_cta {
+    width: 100%;
+    background-color: #2d3142;
+    background-image: url('../../img/bg_main_home.png');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.main_cta .main_cta_content {
+    max-width: 1300px;
+    margin: 0 auto;
+}
+
+.main_cta .main_cta_content .main_cta_content_spacer {
+    margin: 0 auto;
+    max-width: 1300px;
+    padding: 22% 40px;
+}
+
+.main_cta .main_cta_content .main_cta_content_spacer h1 {
+    font-size: 3em;
+    color: #fff;
+    font-weight: 700;
+    text-align: center;
+}
+
+.main_cta .main_cta_content .main_cta_content_spacer p {
+    font-size: 1.875em;
+    color: #fff;
+    text-align: center;
+    margin: 20px 0;
+}
+
+.main_cta .main_cta_content .main_cta_content_spacer .btn {
+    background-color: #d36833;
+    color: #fff;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    font-size: 0.8em;
+    padding: 10px 40px;
 }
