--- a/04-estilizando-conteudo/_cdn/css/style.css
+++ b/04-estilizando-conteudo/_cdn/css/style.css
@@ -83,3 +83,59 @@
     font-size: 0.8em;
     padding: 10px 40px;
 }
+
+/* ESTILIZAÇÃO SESSÃO ARTIGOS */
+.main_blog {
+    max-width: calc(1300px - 40px);
+    padding: 0 20px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.main_blog .main_blog_header {
+    flex-basis: 100%;
+    margin: 30px 0;
+} 
+
+.main_blog .main_blog_header h1 {
+    color: #333;
+    margin-bottom: 5px;
+    font-size: 1.8em;
+}
+
+.main_blog article {
+    flex-basis: calc(25% - 20px);
+    margin-bottom: 30px;
+    opacity: 0.6;
+
+    transition: opacity .5s linear;
+}
+
+.main_blog article:hover {
+    opacity: 1;
+    transition: .5s ease-in-out;
+}
+
+.main_blog article img {
+    width: 100%;
+}
+
+.main_blog article p {
+    margin: 10px 0;
+}
+
+.main_blog article .category {
+    color: #d36833;
+    font-size: .875em;
+}
+
+.main_blog article h2 {
+    font-weight: 300;
+    font-size: 1.2em;
+}
+
+.main_blog article h2 a {
+    color: #333;
+}
