--- a/04-estilizando-conteudo/_cdn/css/style.css
+++ b/04-estilizando-conteudo/_cdn/css/style.css
@@ -306,3 +306,73 @@
     width: 15px;
     margin: 4px 0;
 }
+
+/* ESTILIZAÇÃO DA DOBRA [A ESCOLA] pt1 (Utilizando forma que não mostra do pai ao filho à ser estilizado) */
+.main_school {
+    width: 100%;
+
+    border: 3px solid red;
+}
+
+.main_school_content {
+    max-width: 1300px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    border: 3px solid yellowgreen;
+}
+
+.main_school_content_header {
+    flex-basis: 100%;
+    padding: 40px 0;
+    color: #333;
+
+    border: 2px solid black;
+}
+
+.main_school_content_header h1 {
+    font-size: 2.2em;
+    margin-bottom: 10px;
+}
+
+.main_school_content_left {
+    flex-basis: calc(70% - 20px);
+
+    border: 2px solid blue;
+}
+
+.main_school_content_left_social_network {
+    background-color: #2d3142;
+    padding: 10px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+
+    border: 2px solid violet;
+}
+
+.main_school_content_left_social_network span {
+    margin-left: 20px;
+}
+
+.main_school_content_left_social_network a {
+    color: #fff;
+    font-size: 0.9em;
+}
+
+.main_school_content_left_social_network a:hover {
+    text-decoration: underline;
+} 
+
+.main_school_content_right {
+    flex-basis: 30%;
+}
+
+.main_school_content_right img {
+    width: 100%;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+}
