--- a/04-estilizando-conteudo/_cdn/css/style.css
+++ b/04-estilizando-conteudo/_cdn/css/style.css
@@ -504,3 +504,85 @@
     background-color: #2d3142;
     color: #fff;
 }
+
+/* FOOTER */
+.main_optin_footer {
+    width: 100%;
+    background-color: #f7f7f7;
+}
+
+.main_content_optin_footer {
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 40px 0;
+    text-align: center;
+    color: #333;
+}
+
+.main_content_optin_footer h1 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+}
+
+.main_content_optin_footer .btn {
+    background-color: #d36833;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.main_footer {
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 40px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    color: #333;
+}
+
+.main_footer > header {
+    flex-basis: 100%;
+}
+
+.main_footer > header h1 {
+    font-size: 1.4em;
+    margin-bottom: 40px;
+}
+
+.main_footer > article {
+    flex-basis: 25%;
+}
+
+.main_footer > article:last-child {
+    flex-basis: 50%;
+}
+
+.main_footer > article h2 {
+    margin-bottom: 20px;
+}
+
+.main_footer > article ul li {
+    list-style: none;
+    margin: 3px 0;
+}
+
+.main_footer > article ul li a {
+    color: #333;
+    font-size: 0.9em;
+}
+
+.main_footer > article ul li a:hover {
+    text-decoration: underline;
+}
+
+footer {
+    text-align: center;
+    padding: 20px 0;
+    background-color: #f7f7f7;
+    border-top: 1px solid rgb(221, 221, 221);
+    font-size: 0.9em;
+    color: #666;
+    font-weight: 300;
+}
