--- a/05-mobile_first/style.css
+++ b/05-mobile_first/style.css
@@ -200,3 +200,59 @@
     font-size: 1.1em;
     font-weight: 300;
 }
+
+/* Media Queries */
+@media(min-width: 45em) {
+    .main_blog_content_article {
+        flex-basis: calc(50% - 5px);
+    }
+
+    .main_gallery_content article {
+        flex-basis: calc(50% - 7px);
+    }
+}
+
+@media(min-width: 56em) {
+    .main_header_content_logo {
+        flex-basis: 200px;
+    }
+
+    .main_header_content_menu {
+        flex: calc(100% - 200px);
+        align-self: center;
+        justify-content: flex-end;
+    }
+
+    .main_header_content_menu ul {
+        max-width: 500px;
+    }
+}
+
+@media(min-width: 64em) {
+    .main_blog_content_article {
+        flex-basis: calc(33% - 5px);
+    }
+
+    .main_optin_content form input {
+        flex-basis: calc(40% - 20px);
+        margin: 0;
+    }
+
+    .main_optin_content form button {
+        flex-basis: 20%;
+    }
+
+    .main_gallery_content article {
+        flex-basis: calc(33% - 7px);
+    }
+}
+
+@media(min-width: 85em) {
+    .main_header_content, .main_blog_content, .main_optin_content, .main_gallery_content, .main_footer_content {
+        max-width: 1200px;
+    }
+
+    .main_gallery_content article {
+        flex-basis: calc(16% - 7px);
+    }
+}
