--- a/04-estilizando-conteudo/_cdn/css/style.css
+++ b/04-estilizando-conteudo/_cdn/css/style.css
@@ -592,8 +592,6 @@ footer {
 
 /* MENU MOBILE */
 .main_header_content_menu_mobile {
-    border: 1px solid white;
-
     display: flex;
     flex-basis: calc(100% - 330px);
     justify-content: flex-end;
@@ -622,7 +620,7 @@ footer {
     -webkit-border-radius: 4px 4px 0 0;
 }
 
-.main_header_content_menu_mobile_obj:hover {
+.main_header_content_menu_mobile_obj:hover, .main_header_content_menu_mobile_obj_active {
     background-color: #fff;
 }
 
