--- a/04-estilizando-conteudo/_cdn/css/style.css
+++ b/04-estilizando-conteudo/_cdn/css/style.css
@@ -206,6 +206,7 @@
 .main_course .main_course_header {
     max-width: 780px;
     margin: 0 auto;
+    padding: 0 20px;
     text-align: center;
     color: #333;
     margin-bottom: 40px;
@@ -746,6 +747,15 @@ footer {
         margin: 0 auto;
         padding: 8px 12px;
     }
+
+    .main_course_header h1 {
+        font-size: 2.5em !important;
+    }
+
+    .main_course_about_content article {
+        flex-basis: 100%;
+        margin: 10px 20px;
+    }
 }
 
 /* 480px */
@@ -768,5 +778,9 @@ footer {
 
     .main_blog article h2 {
         font-size: 1.2em;
+    }
+
+    .main_course_header h1 {
+        font-size: 2.3em !important;
     }
 }
