--- a/07-microformatos/_cdn/css/style.css
+++ b/07-microformatos/_cdn/css/style.css
@@ -139,6 +139,42 @@
     color: #333;
 }
 
+.main_blog .main_blog_meta {
+    font-size: 0.8em;
+    margin-top: 10px;
+    background-color: #e7e7e7;
+    padding: 10px 5px;
+    text-align: center;
+}
+
+.main_blog .main_blog_meta p {
+    margin: 0;
+    color: #999;
+    font-weight: 400;
+    margin-bottom: 5px;
+}
+
+.main_blog .main_blog_meta p a {
+    color: #666;
+}
+
+.main_blog .main_blog_meta p a:hover {
+    text-decoration: underline;
+}
+
+.main_blog .main_blog_meta img {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    margin-left: 5px;
+}
+
+.main_blog .main_blog_meta time {
+    color: #999;
+}
+
 /* SESSÃO OPTIN */
 .main_optin {
     width: 100%;
